src/plugins/platforms/xcb/qxcbatom.cpp
@@ -182,6 +182,7 @@ static const char *xcb_atomnames = {
     "XdndActionCopy\0"
     "XdndActionLink\0"
     "XdndActionMove\0"
+    "XdndActionAsk\0"
     "XdndActionPrivate\0"
 
     // Xkb
