src/plugins/platforms/xcb/qxcbdrag.cpp
@@ -216,6 +216,22 @@ void QXcbDrag::endDrag()
     initiatorWindow.clear();
 }
 
+Qt::DropAction QXcbDrag::defaultAction(Qt::DropActions possibleActions, Qt::KeyboardModifiers modifiers) const
+{
+    if (currentDrag() || drop_actions.isEmpty())
+        return QBasicDrag::defaultAction(possibleActions, modifiers);
+
+    return toDropAction(drop_actions.first());
+}
+
+void QXcbDrag::handlePropertyNotifyEvent(const xcb_property_notify_event_t *event)
+{
+    if (event->window != xdnd_dragsource || event->atom != atom(QXcbAtom::XdndActionList))
+        return;
+
+    readActionList();
+}
+
 static
 bool windowInteractsWithPosition(xcb_connection_t *connection, const QPoint & pos, xcb_window_t w, xcb_shape_sk_t shapeType)
 {
@@ -465,16 +481,20 @@ void QXcbDrag::move(const QPoint &globalPos, Qt::MouseButtons b, Qt::KeyboardMod
         move.data.data32[1] = 0; // flags
         move.data.data32[2] = (globalPos.x() << 16) + globalPos.y();
         move.data.data32[3] = connection()->time();
-        move.data.data32[4] = toXdndAction(defaultAction(currentDrag()->supportedActions(), mods));
+        const auto supportedActions = currentDrag()->supportedActions();
+        const auto requestedAction = defaultAction(supportedActions, mods);
+        move.data.data32[4] = toXdndAction(requestedAction);
 
         qCDebug(lcQpaXDnd) << "sending XdndPosition to target:" << target;
 
         source_time = connection()->time();
 
-        if (w)
+        if (w) {
             handle_xdnd_position(w, &move, b, mods);
-        else
+        } else {
+            setActionList(requestedAction, supportedActions);
             xcb_send_event(xcb_connection(), false, proxy_target, XCB_EVENT_MASK_NO_EVENT, (const char *)&move);
+        }
     }
 
     static const bool isUnity = qgetenv("XDG_CURRENT_DESKTOP").toLower() == "unity";
@@ -555,6 +575,16 @@ Qt::DropAction QXcbDrag::toDropAction(xcb_atom_t a) const
     return Qt::CopyAction;
 }
 
+Qt::DropActions QXcbDrag::toDropActions(const QVector<xcb_atom_t> &atoms) const
+{
+    Qt::DropActions actions;
+    for (const auto actionAtom : atoms) {
+        if (actionAtom != atom(QXcbAtom::XdndActionAsk))
+            actions |= toDropAction(actionAtom);
+    }
+    return actions;
+}
+
 xcb_atom_t QXcbDrag::toXdndAction(Qt::DropAction a) const
 {
     switch (a) {
@@ -570,6 +600,60 @@ xcb_atom_t QXcbDrag::toXdndAction(Qt::DropAction a) const
     default:
         return atom(QXcbAtom::XdndActionCopy);
     }
+}
+
+void QXcbDrag::readActionList()
+{
+    drop_actions.clear();
+    auto reply = Q_XCB_REPLY(xcb_get_property, xcb_connection(), false, xdnd_dragsource,
+                             atom(QXcbAtom::XdndActionList), XCB_ATOM_ATOM,
+                             0, 1024);
+    if (reply && reply->type != XCB_NONE && reply->format == 32) {
+        int length = xcb_get_property_value_length(reply.get()) / 4;
+
+        xcb_atom_t *atoms = (xcb_atom_t *)xcb_get_property_value(reply.get());
+        for (int i = 0; i < length; ++i)
+            drop_actions.append(atoms[i]);
+    }
+}
+
+void QXcbDrag::setActionList(Qt::DropAction requestedAction, Qt::DropActions supportedActions)
+{
+#ifndef QT_NO_CLIPBOARD
+    QVector<xcb_atom_t> actions;
+    if (requestedAction != Qt::IgnoreAction)
+        actions.append(toXdndAction(requestedAction));
+
+    auto checkAppend = [this, requestedAction, supportedActions, &actions](Qt::DropAction action) {
+        if (requestedAction != action && supportedActions & action)
+            actions.append(toXdndAction(action));
+    };
+
+    checkAppend(Qt::CopyAction);
+    checkAppend(Qt::MoveAction);
+    checkAppend(Qt::LinkAction);
+
+    if (current_actions != actions) {
+        xcb_change_property(xcb_connection(), XCB_PROP_MODE_REPLACE, connection()->clipboard()->owner(),
+                            atom(QXcbAtom::XdndActionList),
+                            XCB_ATOM_ATOM, 32, actions.size(), actions.constData());
+        current_actions = actions;
+    }
+#endif
+}
+
+void QXcbDrag::startListeningForActionListChanges()
+{
+    connection()->addWindowEventListener(xdnd_dragsource, this);
+    const uint32_t event_mask[] = { XCB_EVENT_MASK_PROPERTY_CHANGE };
+    xcb_change_window_attributes(xcb_connection(), xdnd_dragsource, XCB_CW_EVENT_MASK, event_mask);
+}
+
+void QXcbDrag::stopListeningForActionListChanges()
+{
+    const uint32_t event_mask[] = { XCB_EVENT_MASK_NO_EVENT };
+    xcb_change_window_attributes(xcb_connection(), xdnd_dragsource, XCB_CW_EVENT_MASK, event_mask);
+    connection()->removeWindowEventListener(xdnd_dragsource);
 }
 
 int QXcbDrag::findTransactionByWindow(xcb_window_t window)
@@ -652,6 +736,9 @@ void QXcbDrag::handleEnter(QPlatformWindow *, const xcb_client_message_event_t *
         return;
 
     xdnd_dragsource = event->data.data32[0];
+    startListeningForActionListChanges();
+    readActionList();
+
     if (!proxy)
         proxy = xdndProxy(connection(), xdnd_dragsource);
     current_proxy_target = proxy ? proxy : xdnd_dragsource;
@@ -718,7 +805,9 @@ void QXcbDrag::handle_xdnd_position(QPlatformWindow *w, const xcb_client_message
         supported_actions = currentDrag()->supportedActions();
     } else {
         dropData = m_dropData;
-        supported_actions = Qt::DropActions(toDropAction(e->data.data32[4]));
+        supported_actions = toDropActions(drop_actions);
+        if (e->data.data32[4] != atom(QXcbAtom::XdndActionAsk))
+            supported_actions |= Qt::DropActions(toDropAction(e->data.data32[4]));
     }
 
     auto buttons = currentDrag() ? b : connection()->queryMouseButtons();
@@ -862,8 +951,10 @@ void QXcbDrag::handleLeave(QPlatformWindow *w, const xcb_client_message_event_t 
     // If the target receives XdndLeave, it frees any cached data and forgets the whole incident.
     qCDebug(lcQpaXDnd) << "target:" << event->window << "received XdndLeave";
 
-    if (!currentWindow || w != currentWindow.data()->handle())
+    if (!currentWindow || w != currentWindow.data()->handle()) {
+        stopListeningForActionListChanges();
         return; // sanity
+    }
 
     // ###
 //    if (checkEmbedded(current_embedding_widget, event)) {
@@ -877,6 +968,8 @@ void QXcbDrag::handleLeave(QPlatformWindow *w, const xcb_client_message_event_t 
         qCDebug(lcQpaXDnd, "xdnd drag leave from unexpected source (%x not %x",
                 event->data.data32[0], xdnd_dragsource);
     }
+
+    stopListeningForActionListChanges();
 
     QWindowSystemInterface::handleDrag(w->window(), nullptr, QPoint(), Qt::IgnoreAction, 0, 0);
 }
@@ -924,6 +1017,7 @@ void QXcbDrag::handleDrop(QPlatformWindow *, const xcb_client_message_event_t *e
     qCDebug(lcQpaXDnd) << "target:" << event->window << "received XdndDrop";
 
     if (!currentWindow) {
+        stopListeningForActionListChanges();
         xdnd_dragsource = 0;
         return; // sanity
     }
@@ -946,7 +1040,7 @@ void QXcbDrag::handleDrop(QPlatformWindow *, const xcb_client_message_event_t *e
         supported_drop_actions = Qt::DropActions(l[4]);
     } else {
         dropData = m_dropData;
-        supported_drop_actions = accepted_drop_action;
+        supported_drop_actions = accepted_drop_action | toDropActions(drop_actions);
     }
 
     if (!dropData)
@@ -980,6 +1074,8 @@ void QXcbDrag::handleDrop(QPlatformWindow *, const xcb_client_message_event_t *e
 
     xcb_send_event(xcb_connection(), false, current_proxy_target,
                    XCB_EVENT_MASK_NO_EVENT, (char *)&finished);
+
+    stopListeningForActionListChanges();
 
     dropped = true;
 }
